Fixed section title align

--- a/src/app/[lng]/_sections/Principles/styles.module.scss
+++ b/src/app/[lng]/_sections/Principles/styles.module.scss
@@ -36,6 +36,7 @@
 
     .title {
       margin-bottom: 0;
+      text-align: center;
     }
   }
 
